# xecs

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.rst  justfile  pyproject.toml
.github/workflows/: CI.yaml  tests.yaml
benchmarks/: benchmark_getitem.py  benchmark_iadd.py  benchmark_iadd_mask.py  benchmark_query.py  benchmark_setitem.py  benchmark_vec2.py
benchmarks/query/: benchmark_component_access.py  benchmark_repeated_five_component_queries.py  benchmark_repeated_one_component_query.py  benchmark_repeated_two_component_query.py  benchmark_unrepeated_five_component_query.py  benchmark_unrepeated_one_component_query.py  benchmark_unrepeated_two_component_query.py
docs/source/: apps.rst  boids.rst  breakout.rst  conf.py  ecs.rst  entity_id.rst  events.rst  examples.rst  getting_started.rst  index.rst  keyboard.rst  modules.rst  mouse_position.rst  mouse_presses.rst  moving_circles.rst  plugins.rst  resources.rst  text.rst
docs/source/_templates/: class.rst
examples/boids/: boids.py  xecs_pygame.py
examples/breakout/: breakout.py
examples/entity_id/: entity_id.py
examples/keyboard/: keyboard.py
examples/mouse_position/: mouse_position.py
examples/mouse_presses/: mouse_presses.py
examples/moving_circles/: moving_circles.py
examples/text/: text.py
python/ecstacy/: __init__.py
python/ecstasy/: __init__.py  ecstasy.pyi
python/ecstasy/_internal/: app.py  commands.py  component.py  component_id.py  float.py  getitem_key.py  query.py  resource.py  rust_type_aliases.py  struct.py  time.py  vec2.py  world.py
python/necs/: __init__.py  necs.pyi
python/necs/_internal/: array.py  element_type.py
python/xecs/: __init__.py  xecs.pyi
python/xecs/_internal/: app.py  (+24 more)
src/: app.rs  array.rs  array_view.rs  array_view_indices.rs  arrays.rs  bool.rs  combinations.rs  component_id.rs  component_pool.rs  entity_id.rs  entity_index.rs  error_handlers.rs  float32.rs  float_op_rhs_value.rs  getitem_key.rs  int32.rs  lib.rs  map.rs  mask.rs  py_field.rs  python_arrays.rs  query.rs  query_id.rs  readable_array.rs  set.rs  time.rs  uint32.rs
src/arrays/: array.rs  float_rhs.rs  imath.rs  int_rhs.rs  python_float_array.rs  python_int_array.rs  setitem.rs  zip.rs
tests/: test_array.py  test_combinations.py  test_component.py  test_despawn.py  test_entity_id.py  test_events.py  test_getting_neighbors.py  test_numeric_arrays.py  test_query.py  test_resource.py  test_scheduling.py  test_struct.py  test_systems.py  test_vec2.py  types.py
tests/arrays/: conftest.py  test_getitem.py
tests/float32/: test_comparisons.py  test_creation.py  test_imath.py  test_indexing.py  test_math.py  test_repr.py
tests/float_arrays/: conftest.py  test_getitem.py  test_imath.py  test_math.py  test_setitem.py
tests/int_arrays/: conftest.py
(+1 files in other folders)
