[package]
name = "ecstasy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ecstasy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
numpy = "0.18"
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
