[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "necs"
dependencies = [
  "numpy",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-benchmark",
]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true


[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
  "test_*.py",
  "benchmark_*.py"
]
python_functions = [
  "test_*",
  "benchmark_*"
]
